# MichiSurveillance

./: .gitignore  CMakeLists.txt  README.md
src/: pub_camera.cpp  sub_camera.cpp
